--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -7,6 +7,17 @@ on:
   repository_dispatch:
     types: [trigger-frontend-build]
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -19,6 +30,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -70,6 +85,9 @@ jobs:
           # Copy frontend build files
           cp -r ./frontend/build/* .
           
+          # Create .nojekyll file to disable Jekyll processing
+          touch .nojekyll
+          
           # Commit and push changes
           git add -A
           if git diff --staged --quiet; then
@@ -78,3 +96,38 @@ jobs:
             git commit -m "Update frontend build"
             git push origin ${{ env.DEPLOYMENT_BRANCH }}
           fi
+      
+      # Create artifact from the deployment branch content for GitHub Pages
+      - name: Create GitHub Pages artifact
+        run: |
+          # Create a temporary directory for the artifact
+          mkdir -p /tmp/github-pages
+          
+          # Copy all files from the deployment branch
+          cp -r . /tmp/github-pages/
+          
+          # Change to the temp directory and create the artifact
+          cd /tmp/github-pages
+          
+          # Upload the artifact
+          cd $GITHUB_WORKSPACE
+          tar -C /tmp/github-pages -czf $GITHUB_WORKSPACE/github-pages.tar.gz .
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: github-pages.tar.gz
+          retention-days: 1
+
+  # Deploy job for GitHub Pages
+  deploy-pages:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
