Configure generate-data workflow to run on push to main
- Add push trigger for main branch
- Workflow will now run automatically on code merge
- This will trigger frontend deployment as a follow-up action

--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -1,6 +1,9 @@
 name: Generate Data
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
   schedule:
     - cron: '0 */6 * * *'  # Run every 6 hours
