Fix GitHub Pages deployment workflow
- Improve branch existence checks using `git ls-remote` to prevent failures
- Fix worktree and checkout operations to properly handle missing branches
- Enhance build file detection for SvelteKit output
- Exclude .git directory from GitHub Pages artifact

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -54,11 +54,14 @@ jobs:
 
       - name: Update deployment branch with frontend build
         run: |
-          # Checkout deployment branch if it exists
+          # Check if deployment branch exists
           git fetch origin
-          if git rev-parse --verify origin/${{ env.DEPLOYMENT_BRANCH }} > /dev/null 2>&1; then
-            git checkout ${{ env.DEPLOYMENT_BRANCH }}
+          if git ls-remote --heads origin ${{ env.DEPLOYMENT_BRANCH }} | grep -q ${{ env.DEPLOYMENT_BRANCH }}; then
+            echo "Deployment branch exists. Updating it..."
+            git fetch origin ${{ env.DEPLOYMENT_BRANCH }}
+            git checkout -b ${{ env.DEPLOYMENT_BRANCH }} --track origin/${{ env.DEPLOYMENT_BRANCH }}
           else
+            echo "Deployment branch does not exist. Creating it..."
             # Create new orphan branch if it doesn't exist
             git checkout --orphan ${{ env.DEPLOYMENT_BRANCH }}
             git rm -rf .
@@ -80,7 +83,26 @@ jobs:
           fi
           
           # Copy frontend build files
-          cp -r ./frontend/build/* .
+          echo "Locating build output directory..."
+          if [ -d "./frontend/build" ] && [ "$(ls -A ./frontend/build)" ]; then
+            echo "Found build files at ./frontend/build"
+            cp -r ./frontend/build/* .
+          elif [ -d "./frontend/.svelte-kit/output/prerendered" ] && [ "$(ls -A ./frontend/.svelte-kit/output/prerendered)" ]; then
+            echo "Found build files at ./frontend/.svelte-kit/output/prerendered"
+            cp -r ./frontend/.svelte-kit/output/prerendered/* .
+          else
+            # Fallback: search for any build directory
+            echo "Searching for build directory..."
+            build_dir=$(find ./frontend -type d -name "build" -not -path "*/node_modules/*" | head -n 1)
+            if [ -n "$build_dir" ] && [ -d "$build_dir" ] && [ "$(ls -A $build_dir)" ]; then
+              echo "Found build files at $build_dir"
+              cp -r $build_dir/* .
+            else
+              echo "ERROR: Build files not found!"
+              ls -la ./frontend/
+              exit 1
+            fi
+          fi
           
           # Create .nojekyll file to disable Jekyll processing
           touch .nojekyll
@@ -100,8 +122,8 @@ jobs:
           # Create a temporary directory for the artifact
           mkdir -p /tmp/github-pages
           
-          # Copy all files from the deployment branch
-          cp -r . /tmp/github-pages/
+          # Copy all files (except .git) from the deployment branch
+          cp -r $(ls -A | grep -v "^\.git$") /tmp/github-pages/
           
           # Change to the temp directory and create the artifact
           cd /tmp/github-pages
