--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -47,10 +47,12 @@ jobs:
       - name: Update deployment branch with data
         run: |
           # Check if deployment branch exists
-          if git rev-parse --verify origin/${{ env.DEPLOYMENT_BRANCH }} > /dev/null 2>&1; then
+          if git ls-remote --heads origin ${{ env.DEPLOYMENT_BRANCH }} | grep -q ${{ env.DEPLOYMENT_BRANCH }}; then
+            echo "Deployment branch exists. Updating it..."
             # Clone the existing deployment branch to preserve frontend files
+            git fetch origin ${{ env.DEPLOYMENT_BRANCH }}
             mkdir -p /tmp/deployment-branch
-            git worktree add --detach /tmp/deployment-branch ${{ env.DEPLOYMENT_BRANCH }}
+            git worktree add --detach /tmp/deployment-branch origin/${{ env.DEPLOYMENT_BRANCH }}
             cd /tmp/deployment-branch
             
             # Update only data files
