--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -47,6 +47,33 @@ jobs:
         working-directory: ./frontend
         run: npm run build
 
+      # Save the build output before switching branches
+      - name: Save build output
+        run: |
+          echo "Saving build output..."
+          mkdir -p /tmp/build-output
+          if [ -d "./frontend/build" ] && [ "$(ls -A ./frontend/build)" ]; then
+            echo "Found build files at ./frontend/build"
+            cp -r ./frontend/build/* /tmp/build-output/
+          elif [ -d "./frontend/.svelte-kit/output/prerendered" ] && [ "$(ls -A ./frontend/.svelte-kit/output/prerendered)" ]; then
+            echo "Found build files at ./frontend/.svelte-kit/output/prerendered"
+            cp -r ./frontend/.svelte-kit/output/prerendered/* /tmp/build-output/
+          else
+            # Fallback: search for any build directory
+            echo "Searching for build directory..."
+            build_dir=$(find ./frontend -type d -name "build" -not -path "*/node_modules/*" | head -n 1)
+            if [ -n "$build_dir" ] && [ -d "$build_dir" ] && [ "$(ls -A $build_dir)" ]; then
+              echo "Found build files at $build_dir"
+              cp -r $build_dir/* /tmp/build-output/
+            else
+              echo "ERROR: Build files not found!"
+              ls -la ./frontend/
+              exit 1
+            fi
+          fi
+          echo "Build output saved. Contents:"
+          ls -la /tmp/build-output/
+
       - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
@@ -82,26 +109,15 @@ jobs:
             cp -r /tmp/data-backup/* ${{ env.DATA_DIR }}/
           fi
           
-          # Copy frontend build files
-          echo "Locating build output directory..."
-          if [ -d "./frontend/build" ] && [ "$(ls -A ./frontend/build)" ]; then
-            echo "Found build files at ./frontend/build"
-            cp -r ./frontend/build/* .
-          elif [ -d "./frontend/.svelte-kit/output/prerendered" ] && [ "$(ls -A ./frontend/.svelte-kit/output/prerendered)" ]; then
-            echo "Found build files at ./frontend/.svelte-kit/output/prerendered"
-            cp -r ./frontend/.svelte-kit/output/prerendered/* .
+          # Copy the saved build output files
+          echo "Copying saved build output..."
+          if [ -d "/tmp/build-output" ] && [ "$(ls -A /tmp/build-output)" ]; then
+            cp -r /tmp/build-output/* .
+            echo "Build files copied successfully"
           else
-            # Fallback: search for any build directory
-            echo "Searching for build directory..."
-            build_dir=$(find ./frontend -type d -name "build" -not -path "*/node_modules/*" | head -n 1)
-            if [ -n "$build_dir" ] && [ -d "$build_dir" ] && [ "$(ls -A $build_dir)" ]; then
-              echo "Found build files at $build_dir"
-              cp -r $build_dir/* .
-            else
-              echo "ERROR: Build files not found!"
-              ls -la ./frontend/
-              exit 1
-            fi
+            echo "ERROR: No build files found in saved output!"
+            ls -la /tmp/
+            exit 1
           fi
           
           # Create .nojekyll file to disable Jekyll processing
