--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -9,6 +9,7 @@ permissions:
   contents: write
   pages: write
   id-token: write
+  deployments: write
 
 # Allow only one concurrent deployment
 concurrency:
@@ -141,12 +142,24 @@ jobs:
           # Copy all files (except .git) from the deployment branch
           cp -r $(ls -A | grep -v "^\.git$") /tmp/github-pages/
           
-          # Change to the temp directory and create the artifact
-          cd /tmp/github-pages
+          # Ensure required GitHub Pages files exist
+          touch /tmp/github-pages/.nojekyll
           
-          # Upload the artifact
+          # Make sure index.html exists in the root
+          if [ ! -f "/tmp/github-pages/index.html" ]; then
+            echo "Warning: index.html not found in deployment files"
+            ls -la /tmp/github-pages/
+          fi
+          
+          # Create the artifact
+          echo "Creating GitHub Pages artifact"
           cd $GITHUB_WORKSPACE
           tar -C /tmp/github-pages -czf $GITHUB_WORKSPACE/github-pages.tar.gz .
+          
+          # Check the artifact
+          echo "GitHub Pages artifact contents:"
+          mkdir -p /tmp/verify-artifact
+          tar -tf $GITHUB_WORKSPACE/github-pages.tar.gz | head -n 20
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-artifact@v4
@@ -163,6 +176,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-deploy
     steps:
+      - name: Debug artifact
+        run: |
+          echo "Starting GitHub Pages deployment with artifact: github-pages"
+          
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages
+          timeout: 1200000  # Increase timeout to 20 minutes
+          
+      - name: Debug deployment status
+        if: always()
+        run: |
+          echo "Deployment ID: ${{ steps.deployment.outputs.deployment_id || 'unknown' }}"
+          echo "Page URL: ${{ steps.deployment.outputs.page_url || 'unknown' }}"
