--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -154,3 +154,42 @@ jobs:
             git commit -m "Initial frontend deployment from commit: ${{ github.sha }}"
             git push -u origin ${{ env.DEPLOYMENT_BRANCH }}
           fi
+
+      - name: Create GitHub Pages artifact
+        run: |
+          echo "Creating GitHub Pages artifact from deployment branch..."
+          git fetch origin ${{ env.DEPLOYMENT_BRANCH }}
+          git checkout ${{ env.DEPLOYMENT_BRANCH }}
+          
+          # Verify content before creating artifact
+          echo "--- Files at the root level ---"
+          ls -la
+          
+          tar -czf $GITHUB_WORKSPACE/github-pages.tar.gz .
+          
+          # Return to previous branch
+          git checkout -
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: github-pages.tar.gz
+          retention-days: 1
+
+  deploy-pages:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages
+          
+      - name: Output GitHub Pages URL
+        run: |
+          echo "GitHub Pages site deployed to: ${{ steps.deployment.outputs.page_url }}"
